tests/errors/syn.missing-semicolon.module-decl.or
x := 0

main :: () -> void {
};
